--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- Создаем навбар и накидаем туда кнопок -->
     <header class="navbar">
         <div class="navbar_buttons_parent">
             <span class="navbar_button">
@@ -24,6 +25,33 @@
             </span>
         </div>
     </header>
+    <!-- Закрываем навбар -->
+
+    <!-- Основаная секция -->
+    <section class="main_section">
+        <span><img class="main_section_logo" src="./img/LENNI.png" alt="LENNI"></span>
+    </section>
+    <!-- Закрываем основную секцию -->
+
+    <!-- Футер -->
+    <footer>
+
+        <div class="footer_links_box">
+            <div class="links_line"></div>
+            <ul class="links_list_main">
+                <li><a href="#">Календарь мероприятий</a></li>
+                <li><a href="#">Провести мероприятие</a></li>
+                <li><a href="#">Стать арендатором</a></li>
+                <li><a href="#">Наши проекты</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+
+        <span class="footer_logo_parent">
+            <span class="footer_logo_img"><img src="./img/tagree.svg" alt="Tagree"></span>
+            <span class="footer_logo_text">Cоздание и продвижение</span>
+        </span>
+    </footer>
 </body>
 
 </html>
