--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <span class="footer_logo_text">Cоздание и продвижение</span>
         </span>
     </footer>
+    <!-- Закрываем футер -->
 </body>
 
 </html>
