Second commit attempt 4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Нестерова Анастасия</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
@@ -29,6 +29,7 @@
 
     <!-- Основаная секция -->
     <section class="main_section">
+        <span id="glava_1"><h1>Я заголовок h1</h1></span>
         <span><img class="main_section_logo" src="./img/LENNI.png" alt="LENNI"></span>
     </section>
     <!-- Закрываем основную секцию -->
